- reduce spacing below iframe in book file view - increse width of book file view - fix loader issues.

--- a/pages/books/books.module.scss
+++ b/pages/books/books.module.scss
@@ -19,6 +19,8 @@
   padding: 50px 0;
   display: flex;
   justify-content: center;
+  min-height: 100vh;
+
 }
 
 // single books styles
@@ -69,6 +71,7 @@
 .footer {
   text-align: -webkit-center;
   height: 100vh;
+  margin-top: 170px;
 }
 
 .mainDiv {
@@ -113,7 +116,7 @@
 }
 
 .pdfCointainer {
-  width: 60%;
+  width: 100%;
   height: 780px;
 }
 
